# mesh-viewer

./: .gitignore  CMakeLists.txt
src/: main.cpp  mesh.h
